# audioforge

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  sitecustomize.py  开发文档.md
.github/: copilot-instructions.md
Export/: AudioData.json  AudioEventID.cs  AudioManifest.json  BuildReport.json
audioforge/: __init__.py  main.py
audioforge/app/: __init__.py
audioforge/harness/: __init__.py  cli.py  fixtures.py  scenarios.py
docs/: AudioForge使用说明.md  README.md  UnityRuntime三期GameSync设计.md  UnitySDK一期到当前变化总览.md  UnitySDK对接规范.md  UnitySDK输出规范.md  WSG_audiotest.md  ab_experiment_dev_spec.md
docs/guides/: AudioForge使用说明.md  AudioForge研发接入速查.md  AudioForge音频设计速查.md
docs/internal/: audioforge_Audio对象层Schema3迁移设计.md  audioforge_wwise兼容工作台映射.md  audioforge_主流音频中间件评估与优化报告.md  audioforge_主界面信息架构与视觉提案.md  audioforge_商业化改造清单.md  audioforge_文档治理与目录重组方案.md  audioforge_第一期重构实施计划.md  audioforge_第三期RTPC-State-Switch实施计划.md  audioforge_逐页面改造蓝图.md  audioforge_项目稳定性报告.md  coupling_audit_report.md  internal_release_execution_plan.md
docs/operations/: AudioForge容量评估与优化方案.md  AudioForge日志与诊断暴露清单.md  internal_release_execution_plan.md
docs/releases/: v0.05-github-release-summary.md  v0.05-github-release.md  v0.06.0-github-release.md  v0.06.1-github-release.md  v0.06.2-github-release.md  v0.07.0-github-release.md  (+4 more)
tests/: conftest.py  helpers.py
tools/: build_macos_app.py  build_windows_exe.py  generate_developer_handoff_sample.py  package_unity_integration_package.py  package_unity_upm_sdk.py  run_full_chain_check.py  run_harness.py  run_internal_release_validation.py  run_main_controller_stability_batches.py  run_test_suite.py  run_unity_package_release.py  sync_unity_integration_package.py
unity_package/: README.md
unity_validation/: README.md
(+161 files in other folders)
