[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audioforge"
version = "0.09.2"
description = "Data-driven audio middleware authoring tool for Unity integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7",
    "pygame-ce>=2.5",
    "pyloudnorm>=0.1.1",
    "scipy>=1.15",
    "soundfile>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
addopts = "-ra --strict-markers"
markers = [
    "fast: quick unit tests without GUI or release-chain coverage",
    "gui: PySide6 / MainController / widget interaction tests",
    "integration: cross-module authoring or export flow tests",
    "release: release-chain, harness, documentation baseline tests",
    "slow: longer-running suites that should not be the default local loop",
]

[project.scripts]
audioforge-harness = "audioforge.harness.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["audioforge*"]